--- a/public/explore.html
+++ b/public/explore.html
@@ -12,14 +12,13 @@
         <a href="/explore">Explore</a>
         <a href="/create-itinerary">Create Itinerary</a>
         <a href="/my-itineraries" class="my-itineraries">My Itineraries</a>
-      </nav>
-      <h1>Let's Explore!</h1>
+    </nav>
+    <h1>Let's Explore!</h1>
     <input type="text" id="citySearch" placeholder="Search for a city...">
-    <button onclick="searchCities()">Search</button>
-
+    <button id="searchButton">Search</button>
     <div id="citiesContainer"></div>
     <div id="placesContainer"></div>
-
     <script src="explore.js"></script>
 </body>
 </html>
+
