--- a/public/explore.html
+++ b/public/explore.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="/">TripPlanner</a>
-        <a href="/explore">Explore</a>
-        <a href="/create-itinerary">Create Itinerary</a>
-        <a href="/my-itineraries" class="my-itineraries">My Itineraries</a>
+        <a href="index.html">TripPlanner</a>
+        <a href="explore.html">Explore</a>
+        <a href="create-itinerary.html">Create Itinerary</a>
+        <a href="my-itineraries.html" class="my-itineraries">My Itineraries</a>
     </nav>
     <h1>Let's Explore!</h1>
     <input type="text" id="citySearch" placeholder="Search for a city...">
@@ -21,4 +21,3 @@
     <script src="explore.js"></script>
 </body>
 </html>
-
