recover page_itinerary.html

--- a/public/page_itinerary.html
+++ b/public/page_itinerary.html
@@ -2,61 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Places to Explore</title>
+    <title>My Itineraries</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <div class="container">
-        <header>
-
-        </header>
-        <nav>
-            <ul>
-                <li><a href="index.html" id="homeLink" >Home</a></li>
-
-                <li><a href="page_itinerary.html" id="page2Link" class="active">Places to Explore</a></li>
-
-            </ul>
-        </nav>
-        <main>
-            <div id="itineraries">
-                  <div class="card">
-                      <div class="card-inner">
-                          <div class="card-front">
-
-
-                          </div>
-                          <div class="card-back">
-
-
-                          </div>
-                      </div>
-                  </div>
+    <nav class="navbar">
+        <a href="/">TripPlanner</a>
+        <a href="/api/cities">Explore</a>
+        <a href="/create-itinerary">Create Itinerary</a>
+        <a href="/my-itineraries" class="my-itineraries">My Itineraries</a>
+      </nav>
 
 
 
 
-              </div>
+    <div id="itinerariesContainer" class="itineraries-container"></div>
 
-            <div id="map"></div> <!-- Map container -->
-        </main>
 
-    </div>
+
 
 
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-lTyiOQtkTztPb4brRo0y18EwXL5oBBY&callback=initMap&libraries=places">
     </script>
 
 
-    <script src="scripts_itin.js"></script>
-
-<footer>
-      <p>&copy; All Rights Reserved.</p>
-
-</footer>
-
-
+    <script src="scripts.js"></script>
 </body>
 </html>
