--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
   <nav class="navbar">
-    <a href="index.html" class="tab active">TripPlanner</a>
+    <a href="#home" class="tab active">TripPlanner</a>
     <a href="explore.html" class="tab">Explore</a>
     <a href="create-itinerary.html" class="tab">Create Itinerary</a>
-    <a href="page_itinerary.html" class="tab">My Itineraries</a>
+    <a href="#my-itineraries" class="tab">My Itineraries</a>
   </nav>
 
 
