--- a/public/explore.html
+++ b/public/explore.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="index.html">TripPlanner</a>
-        <a href="explore.html">Explore</a>
-        <a href="create-itinerary.html">Create Itinerary</a>
-        <a href="my-itineraries.html" class="my-itineraries">My Itineraries</a>
+        <a href="index.html" class="tab active">TripPlanner</a>
+        <a href="explore.html" class="tab">Explore</a>
+        <a href="create-itinerary.html" class="tab">Create Itinerary</a>
+        <a href="page_itinerary.html" class="tab">My Itineraries</a>
+        <a href="places.html" class="tab">Exciting Places</a>
     </nav>
     <h1>Let's Explore!</h1>
     <input type="text" id="citySearch" placeholder="Search for a city...">
