--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <nav class="navbar">
-    <a href="#home" class="tab active">TripPlanner</a>
+    <a href="index.html" class="tab active">TripPlanner</a>
     <a href="explore.html" class="tab">Explore</a>
     <a href="create-itinerary.html" class="tab">Create Itinerary</a>
-    <a href="#my-itineraries" class="tab">My Itineraries</a>
+    <a href="page_itinerary.html" class="tab">My Itineraries</a>
+    <a href="places.html" class="tab">Exciting Places</a>
   </nav>
-
 
   <h1>A Platform for Travel Enthusiasts</h1>
   <h3>Built by travelers for travelers</h3>
