--- a/public/page_itinerary.html
+++ b/public/page_itinerary.html
@@ -7,11 +7,12 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="/">TripPlanner</a>
-        <a href="/api/cities">Explore</a>
-        <a href="/create-itinerary">Create Itinerary</a>
-        <a href="/my-itineraries" class="my-itineraries">My Itineraries</a>
-      </nav>
+        <a href="index.html" class="tab active">TripPlanner</a>
+        <a href="explore.html" class="tab">Explore</a>
+        <a href="create-itinerary.html" class="tab">Create Itinerary</a>
+        <a href="page_itinerary.html" class="tab">My Itineraries</a>
+        <a href="places.html" class="tab">Exciting Places</a>
+    </nav>
 
 
 
