--- a/public/places.html
+++ b/public/places.html
@@ -8,6 +8,14 @@
 </head>
 
 <body>
+    <nav class="navbar">
+        <a href="index.html" class="tab active">TripPlanner</a>
+        <a href="explore.html" class="tab">Explore</a>
+        <a href="create-itinerary.html" class="tab">Create Itinerary</a>
+        <a href="page_itinerary.html" class="tab">My Itineraries</a>
+        <a href="places.html" class="tab">Exciting Places</a>
+    </nav>
+
     <div class="container">
         <header>
 
