Refactor JavaScript and HTML files, and add new routes in app.js
Major changes include updating hardcoded API links to relative paths in several JavaScript files and modifying several HTML files to reflect these changes. Additionally, two new routes for getting all cities and places by city id were added to the app.js file to connect the new relative paths. Other minor changes include replacing 'var' with 'const' for variable declarations, removing unused or redundant codes and comments, and adding additional log messages for better debugging.

--- a/public/create-itinerary.html
+++ b/public/create-itinerary.html
@@ -28,7 +28,7 @@
   <script src="form.js"></script>
 
   <script>
-    var activeLink = document.getElementById('create-itinerary.html');
+    const activeLink = document.getElementById('create-itinerary.html');
       if (activeLink) {
           activeLink.addEventListener('click', function(e) {
               e.preventDefault();
