--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
 
 <script>
-  var activeLink = document.getElementById('index.html');
+  const activeLink = document.getElementById('index.html');
     if (activeLink) {
         activeLink.addEventListener('click', function(e) {
             e.preventDefault();
