--- a/public/places.html
+++ b/public/places.html
@@ -8,18 +8,7 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <a href="index.html" class="tab active">TripPlanner</a>
-        <a href="explore.html" class="tab">Explore</a>
-        <a href="create-itinerary.html" class="tab">Create Itinerary</a>
-        <a href="page_itinerary.html" class="tab">My Itineraries</a>
-        <a href="places.html" class="tab">Exciting Places</a>
-    </nav>
-
     <div class="container">
-        <header>
-
-        </header>
         <nav>
             <ul>
                 <li><a href="index.html" id="homeLink" >Home</a></li>
@@ -29,7 +18,7 @@
             </ul>
         </nav>
         <main>
-            <div id="itineraries">
+            <div id="cities">
                   <div class="card">
                       <div class="card-inner">
                           <div class="card-front">
